fixing aligns

--- a/styles/youtube_header.css
+++ b/styles/youtube_header.css
@@ -22,13 +22,14 @@
   width: 150px;
   display: flex;
   align-items: center;
+  
 }
 
 /* Ícone do menu hambúrguer */
 .hamburger-icon {
   height: 20px;
   margin-right: 24px;
-  margin-left: 24px;
+  margin-left: 9.5px;
   cursor: pointer;
 }
 
