--- a/styles/youtube_sidebar.css
+++ b/styles/youtube_sidebar.css
@@ -2,7 +2,7 @@
 
 .sidebar {
   position: fixed;
-  top: 60px;
+  top: 55px;
   bottom: 0;
   left: 0;
   width: 70px;
